--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -7,6 +7,24 @@
 
     .title-section{
         color: white;
+        position: relative;
+        margin-bottom: 20px;
+        z-index: 4;
+        width: fit-content;
+        .title{
+            font-size: xx-large;
+        }
+    }
+    .description{
+        z-index: 4;
+        position: relative;
+        color: white;
+        width: 700px;
+        margin-bottom: 20px;
+        line-height: 32px;
+        @media only screen and (max-width:768px){
+            width: 100%;
+        }
     }
 }
 .bottom-circle{
@@ -23,5 +41,68 @@
 
     @media screen and (max-width:425px) {
         height: 20% !important;
+    }
+}
+
+.delayed-div {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in-out 1s forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+.keyboard-div{
+    width: 60%;
+    min-width: 904px;
+    margin: auto;
+    position: relative;
+    margin-top: 30px;
+    z-index: 3;
+
+    .keyboard-img{
+        width: 100%;
+    }
+
+    @media only screen and (max-width:1080px){
+        min-width: 250px;
+    }
+}
+.wire-css{
+    transform: scale(1.2);
+    position: absolute;
+    top: -250px;
+    right: 150px;
+
+    @media screen and (max-width:1080px) {
+        top: -260px;
+    }
+}
+
+.test-btn{
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-family:Arial, Helvetica, sans-serif;
+    padding: 10px 20px;
+    background-color: #38a2de;
+    color: white;
+    border-radius: 24px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (max-width:768px) {
+        width: 80%;
+        bottom: 70px;
+        left: 50%;
+        transform: translateX(-50%);
+        top: auto;
     }
 }
